# Stack

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  init.sh  readme.md
inc/: stack.h
src/: stack.cpp  stack.hpp
tests/: test.cpp
